# recrush

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.config/: hakari.toml
.github/workflows/: rust.yml
recrush/: Cargo.toml
recrush/src/: lib.rs
src/recrush/: Cargo.toml
src/recrush/src/: admission.rs  cache.rs  eviction.rs  lib.rs  policy.rs
src/recrush/src/cache/: modular_cache.rs  ttl_cache.rs
src/recrush/src/policy/: evict_lru.rs  insert_always.rs
src/recrush/src/policy/admission/: always.rs
src/workspace-hack/: Cargo.toml
