[package]
name = "recrush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = ["tokio"]

[dependencies]
hashlink = "0.9"
parking_lot = "0.12"
tokio = { version = "1.21", features = ["sync"], optional = true }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
